--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <section class="animal">
             <h2>Lion</h2>
-            <img src="assets/lion.jpg" alt="Lion">
+            <img src="assets/lion.jpeg" alt="Lion">
             <p>Known as the king of the jungle, lions live in groups called prides and are powerful social hunters.</p>
         </section>
 
